--- a/EDA_comparison_of_runs_in_ensemble.ipynb
+++ b/EDA_comparison_of_runs_in_ensemble.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "replacing ignite.dat with b834b631-a2b3-4592-b8ff-c6bc9258da28\n",
-      "replacing ignite.dat with 8f0a300c-8b46-49c1-bc04-d8cee261f08a\n",
-      "replacing ignite.dat with 5c919f55-6c92-4aed-8821-a5d0f0010319\n",
-      "replacing ignite.dat with 1c4fe865-197b-493e-92b5-01fdef307584\n",
-      "replacing ignite.dat with 2ffb845d-6102-44ce-a54c-d8e5742d6eca\n",
+      "replacing ignite.dat with 22016966-2289-4e67-a6fc-91030919d9c6\n",
+      "replacing ignite.dat with f3c7b4e3-d17f-42c9-8696-8c4fd6e3ba4e\n",
+      "replacing ignite.dat with 01e3d210-6074-4b79-9dea-20c935ebac24\n",
+      "replacing ignite.dat with fb624bec-5ed8-477f-b656-c609ed6ee8f3\n",
+      "replacing ignite.dat with a71a6524-b7a0-41d0-9c01-4d23fd2e0122\n",
       "Save ensemble to replace ignition file contents with new ids.\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "      <td>0.05</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': 'b834b631-a2b3-4592-b8ff-c...</td>\n",
+       "      <td>{'perc': 100, 'id': '22016966-2289-4e67-a6fc-9...</td>\n",
        "      <td>80aa1808-adc0-42c1-88e5-abfe3cfc5c41</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -135,7 +135,7 @@
        "      <td>0.05</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '8f0a300c-8b46-49c1-bc04-d...</td>\n",
+       "      <td>{'perc': 100, 'id': 'f3c7b4e3-d17f-42c9-8696-8...</td>\n",
        "      <td>d7a29471-89ef-4372-a39f-16f3f306edde</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -150,7 +150,7 @@
        "      <td>0.05</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '5c919f55-6c92-4aed-8821-a...</td>\n",
+       "      <td>{'perc': 100, 'id': '01e3d210-6074-4b79-9dea-2...</td>\n",
        "      <td>85a4e12f-3016-4531-a062-fe5e6dca07eb</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -165,7 +165,7 @@
        "      <td>0.05</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '1c4fe865-197b-493e-92b5-0...</td>\n",
+       "      <td>{'perc': 100, 'id': 'fb624bec-5ed8-477f-b656-c...</td>\n",
        "      <td>dd17e766-419e-439f-91e4-876a48d600bf</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -180,7 +180,7 @@
        "      <td>0.05</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '2ffb845d-6102-44ce-a54c-d...</td>\n",
+       "      <td>{'perc': 100, 'id': 'a71a6524-b7a0-41d0-9c01-4...</td>\n",
        "      <td>8f2da49a-9f67-4cce-b207-875c207b0ce9</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -210,7 +210,7 @@
        "      <td>0.15</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': 'b834b631-a2b3-4592-b8ff-c...</td>\n",
+       "      <td>{'perc': 100, 'id': '22016966-2289-4e67-a6fc-9...</td>\n",
        "      <td>56b35589-2b95-402d-9786-e962bd6e4780</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -225,7 +225,7 @@
        "      <td>0.15</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '8f0a300c-8b46-49c1-bc04-d...</td>\n",
+       "      <td>{'perc': 100, 'id': 'f3c7b4e3-d17f-42c9-8696-8...</td>\n",
        "      <td>35075bfa-a1ed-4faa-bfd6-fc92c6e4954d</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -240,7 +240,7 @@
        "      <td>0.15</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '5c919f55-6c92-4aed-8821-a...</td>\n",
+       "      <td>{'perc': 100, 'id': '01e3d210-6074-4b79-9dea-2...</td>\n",
        "      <td>8ba41ffa-3e6a-4ff7-a1c4-2b9c97a97d77</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -255,7 +255,7 @@
        "      <td>0.15</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '1c4fe865-197b-493e-92b5-0...</td>\n",
+       "      <td>{'perc': 100, 'id': 'fb624bec-5ed8-477f-b656-c...</td>\n",
        "      <td>c1e8ee75-c0d8-4d0f-bd79-8282d3b7960a</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -270,7 +270,7 @@
        "      <td>0.15</td>\n",
        "      <td>{'steps_fire': 1, 'steps_wind': 1, 'energy_atm...</td>\n",
        "      <td>{'total_startup_iters': 0}</td>\n",
-       "      <td>{'perc': 100, 'id': '2ffb845d-6102-44ce-a54c-d...</td>\n",
+       "      <td>{'perc': 100, 'id': 'a71a6524-b7a0-41d0-9c01-4...</td>\n",
        "      <td>46d7717b-1b19-4676-982a-0274b15e1bb5</td>\n",
        "      <td>SUCCESS</td>\n",
        "      <td>Task completed!</td>\n",
@@ -335,17 +335,17 @@
        "1154  {'total_startup_iters': 0}   \n",
        "\n",
        "                                               ignition  \\\n",
-       "0     {'perc': 100, 'id': 'b834b631-a2b3-4592-b8ff-c...   \n",
-       "1     {'perc': 100, 'id': '8f0a300c-8b46-49c1-bc04-d...   \n",
-       "2     {'perc': 100, 'id': '5c919f55-6c92-4aed-8821-a...   \n",
-       "3     {'perc': 100, 'id': '1c4fe865-197b-493e-92b5-0...   \n",
-       "4     {'perc': 100, 'id': '2ffb845d-6102-44ce-a54c-d...   \n",
+       "0     {'perc': 100, 'id': '22016966-2289-4e67-a6fc-9...   \n",
+       "1     {'perc': 100, 'id': 'f3c7b4e3-d17f-42c9-8696-8...   \n",
+       "2     {'perc': 100, 'id': '01e3d210-6074-4b79-9dea-2...   \n",
+       "3     {'perc': 100, 'id': 'fb624bec-5ed8-477f-b656-c...   \n",
+       "4     {'perc': 100, 'id': 'a71a6524-b7a0-41d0-9c01-4...   \n",
        "...                                                 ...   \n",
-       "1150  {'perc': 100, 'id': 'b834b631-a2b3-4592-b8ff-c...   \n",
-       "1151  {'perc': 100, 'id': '8f0a300c-8b46-49c1-bc04-d...   \n",
-       "1152  {'perc': 100, 'id': '5c919f55-6c92-4aed-8821-a...   \n",
-       "1153  {'perc': 100, 'id': '1c4fe865-197b-493e-92b5-0...   \n",
-       "1154  {'perc': 100, 'id': '2ffb845d-6102-44ce-a54c-d...   \n",
+       "1150  {'perc': 100, 'id': '22016966-2289-4e67-a6fc-9...   \n",
+       "1151  {'perc': 100, 'id': 'f3c7b4e3-d17f-42c9-8696-8...   \n",
+       "1152  {'perc': 100, 'id': '01e3d210-6074-4b79-9dea-2...   \n",
+       "1153  {'perc': 100, 'id': 'fb624bec-5ed8-477f-b656-c...   \n",
+       "1154  {'perc': 100, 'id': 'a71a6524-b7a0-41d0-9c01-4...   \n",
        "\n",
        "                                    run_id st_state        st_status  st_done  \n",
        "0     80aa1808-adc0-42c1-88e5-abfe3cfc5c41  SUCCESS  Task completed!        0  \n",
@@ -363,7 +363,7 @@
        "[1155 rows x 12 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,14 +381,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Input parameters\n",
-    "wind_s = ens.df[\"wind_speed\"]\n",
-    "wind_d = ens.df[\"wind_direction\"]\n",
-    "surface_m = ens.df[\"surface_moisture\"]"
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "with open('uniform-pgml-success.bp3d.json') as f:\n",
+    "    s = f.read()\n",
+    "ens_json = json.loads(s)\n",
+    "ens_json.keys()\n",
+    "ens_df_json = json.loads(ens_json['df'])\n",
+    "ens_df1 = pd.DataFrame().from_dict(ens_df_json)\n",
+    "\n",
+    "wind_s = ens_df1[\"wind_speed\"]\n",
+    "wind_d = ens_df1[\"wind_direction\"]\n",
+    "surface_m = ens_df1[\"surface_moisture\"]\n",
+    "ignition_t = ens_df1[\"ignition\"]"
    ]
   },
   {
@@ -400,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +419,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 1.0 Wind Direction: 230 Surface Moisture: 0.05 \n",
+      "Wind Speed: 1.0 Wind Direction: 230 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -429,7 +440,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 1.0 Wind Direction: 260 Surface Moisture: 0.1 \n",
+      "Wind Speed: 1.0 Wind Direction: 260 Surface Moisture: 0.1 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -450,7 +461,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 2.0 Wind Direction: 280 Surface Moisture: 0.15 \n",
+      "Wind Speed: 2.0 Wind Direction: 280 Surface Moisture: 0.15 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -471,7 +482,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 2.0 Wind Direction: 320 Surface Moisture: 0.05 \n",
+      "Wind Speed: 2.0 Wind Direction: 320 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -492,7 +503,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 3.0 Wind Direction: 310 Surface Moisture: 0.05 \n",
+      "Wind Speed: 3.0 Wind Direction: 310 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -513,7 +524,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 5.0 Wind Direction: 300 Surface Moisture: 0.05 \n",
+      "Wind Speed: 5.0 Wind Direction: 300 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -534,7 +545,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 7.5 Wind Direction: 290 Surface Moisture: 0.05 \n",
+      "Wind Speed: 7.5 Wind Direction: 290 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -555,7 +566,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 15.0 Wind Direction: 330 Surface Moisture: 0.15 \n",
+      "Wind Speed: 15.0 Wind Direction: 330 Surface Moisture: 0.15 Ignition: ['       igntype=    5\\n', '       &atvlist\\n', '          natv=    2\\n'] \n",
       "\n"
      ]
     },
@@ -580,7 +591,7 @@
     "    fuels_dens = np.array(run_zarr['fuels-moist'])\n",
     "    fig, axs = plt.subplots(1, 5,figsize=(15,15))\n",
     "    times=[20,50,150,300,600]\n",
-    "    print(\"Input Parameters:\\nWind Speed:\",wind_s[run],\"Wind Direction:\",wind_d[run],\"Surface Moisture:\",surface_m[run],\"\\n\") \n",
+    "    print(\"Input Parameters:\\nWind Speed:\",wind_s[run],\"Wind Direction:\",wind_d[run],\"Surface Moisture:\",surface_m[run],\"Ignition:\",ignition_t[run].get('dat')[:3],\"\\n\") \n",
     "\n",
     "    for i, ax in enumerate(axs.flatten()):\n",
     "        ax.set_title(f\"Run #: {run}, Time step: t={times[i]}\")\n",
@@ -599,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +618,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 1.0 Wind Direction: 230 Surface Moisture: 0.05 \n",
+      "Wind Speed: 1.0 Wind Direction: 230 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -628,7 +639,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 1.0 Wind Direction: 260 Surface Moisture: 0.1 \n",
+      "Wind Speed: 1.0 Wind Direction: 260 Surface Moisture: 0.1 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -649,7 +660,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 2.0 Wind Direction: 280 Surface Moisture: 0.15 \n",
+      "Wind Speed: 2.0 Wind Direction: 280 Surface Moisture: 0.15 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -670,7 +681,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 2.0 Wind Direction: 320 Surface Moisture: 0.05 \n",
+      "Wind Speed: 2.0 Wind Direction: 320 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -691,7 +702,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 3.0 Wind Direction: 310 Surface Moisture: 0.05 \n",
+      "Wind Speed: 3.0 Wind Direction: 310 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -712,7 +723,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 5.0 Wind Direction: 300 Surface Moisture: 0.05 \n",
+      "Wind Speed: 5.0 Wind Direction: 300 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -733,7 +744,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 7.5 Wind Direction: 290 Surface Moisture: 0.05 \n",
+      "Wind Speed: 7.5 Wind Direction: 290 Surface Moisture: 0.05 Ignition: ['       igntype=    4\\n', '    &aeriallist\\n', '       naerial=  84\\n'] \n",
       "\n"
      ]
     },
@@ -754,7 +765,7 @@
      "output_type": "stream",
      "text": [
       "Input Parameters:\n",
-      "Wind Speed: 15.0 Wind Direction: 330 Surface Moisture: 0.15 \n",
+      "Wind Speed: 15.0 Wind Direction: 330 Surface Moisture: 0.15 Ignition: ['       igntype=    5\\n', '       &atvlist\\n', '          natv=    2\\n'] \n",
       "\n"
      ]
     },
@@ -778,7 +789,7 @@
     "    fuels_dens = np.array(run_zarr['fuels-dens'])\n",
     "    fig, axs = plt.subplots(1, 5,figsize=(15,15))\n",
     "    times=[20,50,150,300,600]\n",
-    "    print(\"Input Parameters:\\nWind Speed:\",wind_s[run],\"Wind Direction:\",wind_d[run],\"Surface Moisture:\",surface_m[run],\"\\n\") \n",
+    "    print(\"Input Parameters:\\nWind Speed:\",wind_s[run],\"Wind Direction:\",wind_d[run],\"Surface Moisture:\",surface_m[run],\"Ignition:\",ignition_t[run].get('dat')[:3],\"\\n\") \n",
     "\n",
     "    for i, ax in enumerate(axs.flatten()):\n",
     "        ax.set_title(f\"Run #: {run}, Time step: t={times[i]}\")\n",
